--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "cra-template-pwa": "2.0.0",
     "firebase": "^11.9.0",
     "html5-qrcode": "^2.3.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "^7.6.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^5.0.2"
