--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "html5-qrcode": "^2.3.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "6.26.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^5.0.2"
   },
